学生信息管理系统，添加了文件处理，历史记录，但排序问题不是很完善，后期会继续完善

--- a/学生信息管理系统/学生信息管理系统/学生信息管理系统.vcxproj
+++ b/学生信息管理系统/学生信息管理系统/学生信息管理系统.vcxproj
@@ -127,11 +127,13 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="File_stu.c" />
     <ClCompile Include="main.c" />
     <ClCompile Include="menu.c" />
     <ClCompile Include="stu_link.c" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="File_stu.h" />
     <ClInclude Include="menu.h" />
     <ClInclude Include="stu_link.h" />
   </ItemGroup>
